Feature/eks download functionality gdev 1276 (#6)
Added Download functionality (GDEV-1276)
Wrote Integration tests (GDEV-1279)
Bumped chassis lib, hexkit version and updated to new template version
